--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,83 @@
-<h1>Flight search</h1>
+
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>        
+        <div class="container main-container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="search-form col-sm-12">
+                        <h3 class="form-header">Depart</h3>
+                        <div class="form-group"> 
+                            <label for="departFrom">From</label> 
+                            <input type="text" class="form-control" id="departFrom" placeholder="From"> 
+                        </div>
+                        <div class="form-group"> 
+                            <label for="departTo">To</label> 
+                            <input type="text" class="form-control" id="departTo" placeholder="To"> 
+                        </div>
+                        <div class="form-group"> 
+                            <label for="departDate">Date</label> 
+                            <input type="text" class="form-control" id="departDate" placeholder="Date"> 
+                        </div>
+                        <div class="form-group"> 
+                            <button type="submit" class="btn btn-default">Search</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="row">
+                            <ul class="list-group search-result">
+                                <li class="list-group-item">Cras justo odio</li>
+                                <li class="list-group-item">Dapibus ac facilisis in</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="search-form col-sm-12">
+                        <h3 class="form-header">Return</h3>
+                        <div class="form-group"> 
+                            <label for="returnFrom">From</label> 
+                            <input type="text" class="form-control" id="returnFrom" placeholder="From"> 
+                        </div>
+                        <div class="form-group"> 
+                            <label for="returnTo">To</label> 
+                            <input type="text" class="form-control" id="returnTo" placeholder="To"> 
+                        </div>
+                        <div class="form-group"> 
+                            <label for="returnDate">Date</label> 
+                            <input type="text" class="form-control" id="returnDate" placeholder="Date"> 
+                        </div>
+                        <div class="form-group"> 
+                            <button type="submit" class="btn btn-default">Search</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="row">
+                            <ul class="list-group search-result">
+                                <li class="list-group-item">Cras justo odio</li>
+                                <li class="list-group-item">Dapibus ac facilisis in</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
+    </body>
+</html>
