--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Flight search</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
+
     </head>
     <body>        
         <div class="container main-container">
@@ -21,26 +24,23 @@
                         <h3 class="form-header">Depart</h3>
                         <div class="form-group"> 
                             <label for="departFrom">From</label> 
-                            <input type="text" class="form-control" id="departFrom" placeholder="From"> 
+                            <select class="form-control" id="departFrom"></select>
                         </div>
                         <div class="form-group"> 
                             <label for="departTo">To</label> 
-                            <input type="text" class="form-control" id="departTo" placeholder="To"> 
+                            <select class="form-control" id="departTo"></select>
                         </div>
                         <div class="form-group"> 
                             <label for="departDate">Date</label> 
                             <input type="text" class="form-control" id="departDate" placeholder="Date"> 
                         </div>
                         <div class="form-group"> 
-                            <button type="submit" class="btn btn-default">Search</button>
+                            <button id="departSearch" type="submit" class="btn btn-default">Search</button>
                         </div>
                     </div>
                     <div class="col-sm-12">
                         <div class="row">
-                            <ul class="list-group search-result">
-                                <li class="list-group-item">Cras justo odio</li>
-                                <li class="list-group-item">Dapibus ac facilisis in</li>
-                            </ul>
+                            <ul id="departResult" class="list-group search-result"></ul>
                         </div>
                     </div>
                 </div>
@@ -50,26 +50,23 @@
                         <h3 class="form-header">Return</h3>
                         <div class="form-group"> 
                             <label for="returnFrom">From</label> 
-                            <input type="text" class="form-control" id="returnFrom" placeholder="From"> 
+                            <select class="form-control" id="returnFrom"></select>
                         </div>
                         <div class="form-group"> 
                             <label for="returnTo">To</label> 
-                            <input type="text" class="form-control" id="returnTo" placeholder="To"> 
+                            <select class="form-control" id="returnTo"></select>
                         </div>
                         <div class="form-group"> 
                             <label for="returnDate">Date</label> 
                             <input type="text" class="form-control" id="returnDate" placeholder="Date"> 
                         </div>
                         <div class="form-group"> 
-                            <button type="submit" class="btn btn-default">Search</button>
+                            <button id="returnSearch" type="submit" class="btn btn-default">Search</button>
                         </div>
                     </div>
                     <div class="col-sm-12">
                         <div class="row">
-                            <ul class="list-group search-result">
-                                <li class="list-group-item">Cras justo odio</li>
-                                <li class="list-group-item">Dapibus ac facilisis in</li>
-                            </ul>
+                            <ul id="returnResult" class="list-group search-result"></ul>
                         </div>
                     </div>
                 </div>
@@ -77,7 +74,21 @@
         </div>
 
         <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
         <script src="js/main.js"></script>
+
+        <script>
+            $(document).ready(function () { 
+                createFilghtSearchForm(
+                    $('#departFrom'), $('#departTo'), $('#departDate'), $('#departSearch'), $('#departResult')
+                );
+                createFilghtSearchForm(
+                    $('#returnFrom'), $('#returnTo'), $('#returnDate'), $('#returnSearch'), $('#returnResult')
+                );
+            });
+        </script>
     </body>
 </html>
