--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 
         <script>
             $(document).ready(function () { 
+                // init search forms
                 createFilghtSearchForm(
                     $('#departFrom'), $('#departTo'), $('#departDate'), $('#departSearch'), $('#departResult')
                 );
